Change artefacts to an empty array in codemagic.yaml
Updated the publishing section to set artefacts to an empty array.

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -44,7 +44,7 @@ workflows:
       - build/app/outputs/flutter-apk/*.apk
 
     # THIS IS THE OUTGOING WEBHOOK:
-    publishing:
+   publishing:
       scripts:
         - name: Notify build status
           script: |
@@ -53,7 +53,7 @@ workflows:
               -d '{
                 "buildId": "'"$CM_BUILD_ID"'",
                 "status": "'"$CM_BUILD_STEP_STATUS"'",
-                "artefacts": '"${CM_ARTIFACT_LINKS:-[]}"',
+                "artefacts": [],
                 "environment": {
                   "variables": {
                     "BUILD_ID": "'"$BUILD_ID"'",
