--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,10 @@ environment:
   sdk: ^3.8.0
 
 dependencies:
-  flame: ^1.18.0
   flutter:
     sdk: flutter
-    webview_flutter: ^4.10.0
+  webview_flutter: ^4.10.0
+  audioplayers: ^6.0.0
 
   audioplayers: ^6.0.0
   flame_audio: ^2.10.2
