--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   webview_flutter: ^4.10.0
+  webview_flutter_android: ^3.0.0
   audioplayers: ^6.0.0
   flame_audio: ^2.10.2
   go_router: ^16.0.0
