--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,54 +1,20 @@
 name: endless_runner
-description: A Flame game template built with Flutter.
-
-# Prevent accidental publishing to pub.dev.
+description: A WebView shell for loading web games.
 publish_to: 'none'
-
-version: 0.1.0
+version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.0
+  sdk: ^3.5.0
 
 dependencies:
   flutter:
     sdk: flutter
   webview_flutter: ^4.10.0
-  webview_flutter_android: ^3.0.0
-  audioplayers: ^6.0.0
-  flame_audio: ^2.10.2
-  go_router: ^16.0.0
-  provider: ^6.1.2
-  shared_preferences: ^2.2.3
-  nes_ui: ^0.24.1
-  google_fonts: ^6.2.0
-  logging: ^1.2.0
-
+  webview_flutter_android: ^4.3.0
 
 dev_dependencies:
-  flame_test: ^1.16.2
-  flutter_lints: ^6.0.0
-  flutter_test:
-    sdk: flutter
-  flutter_launcher_icons: ^0.14.4
-  test: ^1.25.0
+  flutter_launcher_icons: ^0.14.2
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
-
-  assets:
-    - assets/images/
-    - assets/images/dash/
-    - assets/images/enemies/
-    - assets/images/scenery/
-    - assets/music/
-    - assets/sfx/
-
-  fonts:
-    - family: Press Start 2P
-      fonts:
-        - asset: assets/fonts/Press_Start_2P/PressStart2P-Regular.ttf
-
-flutter_launcher_icons:
-  android: true
-  ios: true
-  image_path: "assets/icons/icon.png"
