--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   webview_flutter: ^4.10.0
   webview_flutter_android: ^4.3.0
+  firebase_core: ^3.12.1
+  firebase_crashlytics: ^4.3.5
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.2
