--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,13 @@ dependencies:
   firebase_crashlytics: ^4.3.5
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.14.2
+  flutter_launcher_icons: ^0.14.3
   flutter_lints: ^5.0.0
+
+  flutter_launcher_icons:
+  android: true
+  ios: false
+  image_path: "assets/icon/icon.png"
 
 flutter:
   uses-material-design: true
