--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ flutter_launcher_icons:
   android: true
   ios: false
   image_path: "assets/icons/icon.png"
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: "assets/icons/icon.png"
 
 flutter:
   uses-material-design: true
