--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   webview_flutter_android: ^4.3.0
   firebase_core: ^3.12.1
   firebase_crashlytics: ^4.3.5
+  appsflyer_sdk: ^6.14.2
+  connectivity_plus: ^6.1.4
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
