--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   appsflyer_sdk: ^6.14.2
   connectivity_plus: ^6.1.4
   http: ^1.2.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
